--- a/public/styles.css
+++ b/public/styles.css
@@ -8,3 +8,22 @@ body {
   background: #eee;
   padding: 0 16px;
 }
+
+.swal-text {
+  color: #000;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.swal-button--confirm {
+  background-color: #bb001b;
+  font-size: 12px;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
+
+.sweet-alert button:hover {
+  opacity: 0.5;
+  background-color: #bb001b;
+  font-size: 12px;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
